<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/normal_gap"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/five_cents_view"
        android:layout_width="@dimen/size_box_coin"
        android:layout_height="@dimen/size_box_coin"
        android:layout_marginTop="@dimen/normal_extra_gap"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/quater_view"
        app:layout_constraintEnd_toStartOf="@+id/ten_cents_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_linear_layout"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/five_cents_content_description"
            app:srcCompat="@drawable/five_cents" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_cents_value"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ten_cents_view"
        android:layout_width="@dimen/size_box_coin"
        android:layout_height="@dimen/size_box_coin"
        android:layout_marginTop="@dimen/normal_extra_gap"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/dollar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five_cents_view"
        app:layout_constraintTop_toBottomOf="@id/amount_linear_layout"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UseCompoundDrawables"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/ten_cents_content_description"
            app:srcCompat="@drawable/ten_cents" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_cents_value"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quater_view"
        android:layout_width="@dimen/size_box_coin"
        android:layout_height="@dimen/size_box_coin"
        android:layout_marginTop="@dimen/hight_gap"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dollar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_cents_view"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/quater_cents_icon_description"
            app:srcCompat="@drawable/quarter" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quater_cents_value"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dollar_view"
        android:layout_width="@dimen/size_box_coin"
        android:layout_height="@dimen/size_box_coin"
        android:layout_marginTop="@dimen/hight_gap"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quater_view"
        app:layout_constraintTop_toBottomOf="@+id/ten_cents_view"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/one_dollar_content_description"
            app:srcCompat="@drawable/one_dollar" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_dollar_value"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hight_gap"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_money"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_text_view"
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textFontWeight="400"
            android:textStyle="bold"
            tools:ignore="UnusedAttribute"
            tools:text="0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>